[gd_scene load_steps=18 format=3 uid="uid://b1bioxmxb7f7b"]

[ext_resource type="Script" path="res://playerContainer.gd" id="1_1gnlt"]
[ext_resource type="Script" path="res://game.gd" id="1_ltnjw"]
[ext_resource type="Texture2D" uid="uid://d01nlhmqf83fb" path="res://gamebackground.png" id="2_cvrnr"]
[ext_resource type="Script" path="res://opponentContainer.gd" id="2_u6hyo"]
[ext_resource type="FontFile" uid="uid://rkk1ddmpcavn" path="res://Micro5-Regular.ttf" id="3_4luyr"]
[ext_resource type="Script" path="res://scorecounter.gd" id="4_21qe4"]
[ext_resource type="Script" path="res://hpcounter.gd" id="5_mq4va"]
[ext_resource type="Texture2D" uid="uid://dkdr8hjttrtwa" path="res://hitlight.png" id="6_fxhxx"]
[ext_resource type="Texture2D" uid="uid://dpi5v61to7hn3" path="res://buttons/hitdown1.png" id="7_ma4gu"]
[ext_resource type="Texture2D" uid="uid://dgpoa618ffr75" path="res://buttons/hitdark.png" id="7_msc0c"]
[ext_resource type="Script" path="res://hit_button.gd" id="9_18ou8"]
[ext_resource type="Texture2D" uid="uid://dspl7xt4cbnju" path="res://buttons/hitdown2.png" id="9_s57tu"]
[ext_resource type="Texture2D" uid="uid://clhswvolri5ic" path="res://buttons/standlight.png" id="11_bsa6y"]
[ext_resource type="Texture2D" uid="uid://coyblt6yyms4j" path="res://buttons/standdown1.png" id="12_7sgwe"]
[ext_resource type="Texture2D" uid="uid://ch7p5m7elxyxj" path="res://buttons/standdark.png" id="13_prhlv"]
[ext_resource type="Script" path="res://stand_button.gd" id="13_u2nuo"]
[ext_resource type="Texture2D" uid="uid://c8oyrmn6wrvj6" path="res://buttons/standdown2.png" id="14_mt1hv"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ltnjw")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.637843, 0.637843, 0.637843, 1)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_cvrnr")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)

[node name="PlayerCounter" type="RichTextLabel" parent="."]
offset_left = -108.0
offset_top = -49.0
offset_right = 122.0
offset_bottom = 55.0
scale = Vector2(0.25, 0.25)
theme_override_fonts/normal_font = ExtResource("3_4luyr")
theme_override_font_sizes/normal_font_size = 100
text = "1/21"
script = ExtResource("4_21qe4")

[node name="PlayerHP" type="RichTextLabel" parent="."]
offset_left = -108.0
offset_top = -27.0
offset_right = 140.0
offset_bottom = 77.0
scale = Vector2(0.125, 0.125)
theme_override_colors/default_color = Color(1, 0.581996, 0.520774, 1)
theme_override_fonts/normal_font = ExtResource("3_4luyr")
theme_override_font_sizes/normal_font_size = 100
text = "100/100"
script = ExtResource("5_mq4va")

[node name="OpponentName" type="RichTextLabel" parent="."]
offset_top = -63.0
offset_right = 545.0
offset_bottom = 41.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/normal_font = ExtResource("3_4luyr")
theme_override_font_sizes/normal_font_size = 100
text = "Noah"
text_direction = 2

[node name="OpponentCounter" type="RichTextLabel" parent="."]
offset_left = 53.0
offset_top = -49.0
offset_right = 283.0
offset_bottom = 55.0
scale = Vector2(0.25, 0.25)
theme_override_fonts/normal_font = ExtResource("3_4luyr")
theme_override_font_sizes/normal_font_size = 100
text = "1/21"
text_direction = 2
script = ExtResource("4_21qe4")

[node name="OpponentHP" type="RichTextLabel" parent="."]
offset_left = 61.0
offset_top = -27.0
offset_right = 461.0
offset_bottom = 77.0
scale = Vector2(0.125, 0.125)
theme_override_colors/default_color = Color(1, 0.581996, 0.520774, 1)
theme_override_fonts/normal_font = ExtResource("3_4luyr")
theme_override_font_sizes/normal_font_size = 100
text = "100/100"
text_direction = 2
script = ExtResource("5_mq4va")

[node name="Stand" type="RichTextLabel" parent="."]
offset_left = 17.0
offset_top = -16.0
offset_right = 769.0
offset_bottom = 88.0
scale = Vector2(0.125, 0.125)
theme_override_colors/default_color = Color(0.433309, 0.808411, 0.564301, 1)
theme_override_fonts/normal_font = ExtResource("3_4luyr")
theme_override_font_sizes/normal_font_size = 100
text = "Stands On 17"
text_direction = 2

[node name="PlayerName" type="RichTextLabel" parent="Stand"]
layout_mode = 0
offset_left = -108.0
offset_top = -63.0
offset_right = 432.0
offset_bottom = 41.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/normal_font = ExtResource("3_4luyr")
theme_override_font_sizes/normal_font_size = 100
text = "You"
text_direction = 1

[node name="PlayerName" type="RichTextLabel" parent="."]
offset_left = -108.0
offset_top = -63.0
offset_right = 432.0
offset_bottom = 41.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/normal_font = ExtResource("3_4luyr")
theme_override_font_sizes/normal_font_size = 100
text = "You"
text_direction = 1

[node name="HitButton" type="TextureButton" parent="."]
offset_left = -16.0
offset_top = -19.0
offset_right = 16.0
offset_bottom = -3.0
texture_normal = ExtResource("6_fxhxx")
texture_pressed = ExtResource("7_ma4gu")
texture_hover = ExtResource("7_msc0c")
texture_disabled = ExtResource("9_s57tu")
script = ExtResource("9_18ou8")

[node name="StandButton" type="TextureButton" parent="."]
offset_left = -16.0
offset_top = 3.0
offset_right = 16.0
offset_bottom = 19.0
texture_normal = ExtResource("11_bsa6y")
texture_pressed = ExtResource("12_7sgwe")
texture_hover = ExtResource("13_prhlv")
texture_disabled = ExtResource("14_mt1hv")
script = ExtResource("13_u2nuo")

[node name="PlayerDieContainer" type="Node2D" parent="."]
script = ExtResource("1_1gnlt")

[node name="OpponentDieContainer" type="Node2D" parent="."]
script = ExtResource("2_u6hyo")

[node name="instructions" type="RichTextLabel" parent="."]
offset_left = -73.0
offset_top = -46.0
offset_right = 1144.0
offset_bottom = 162.0
scale = Vector2(0.12, 0.12)
theme_override_fonts/normal_font = ExtResource("3_4luyr")
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "[center]damage dealt = score difference
bust = 0"
text_direction = 1

[connection signal="pressed" from="HitButton" to="PlayerDieContainer" method="_on_hit_button_pressed"]
[connection signal="pressed" from="StandButton" to="PlayerDieContainer" method="_on_stand_button_pressed"]
[connection signal="resetOpponent" from="PlayerDieContainer" to="OpponentDieContainer" method="_on_player_die_container_reset_opponent"]
[connection signal="rollOpponent" from="PlayerDieContainer" to="OpponentDieContainer" method="_on_player_die_container_roll_opponent"]
